# 18 April 2024
## Iskander Shamsutdinov
- Set up architecture
- Configured basic CI pipeline