@@ -20,9 +20,9 @@ validate-compute-configuration:
       - compute/**/*
   image: python:3.11
   before_script:
-    - apt-get update && apt-get install -y curl
-    - curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
-    - source $HOME/.poetry/env
+    - pip install --upgrade pip
+    - pip install poetry
+    - poetry install -v
   script:
     - poetry install
     - poetry run python -m src
