@@ -2,3 +2,8 @@
 ## Iskander Shamsutdinov
 - Set up architecture
 - Configured basic CI pipeline
+
+# 19 April 2024
+## Iskander Shamsutdinov
+- Implemented basic logic for compute creation
+- Added CI variable to mask api token
